compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyMissingInterface/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyMissingInterface/source.kt:5:15: error: cannot access 'A' which is a supertype of 'B'. Check your module classpath for missing or conflicting dependencies.
        D.m(B.n())
              ^
COMPILATION_ERROR
